# tapiti

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/ui/: index.html
android/app/src/main/java/com/tapiti/obd/: BluetoothService.kt  DevicePickerActivity.kt  TcpProxyServer.kt  WebViewActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
src/: main.rs
src/broker/: mod.rs
src/dtc/: mod.rs
src/logger/: mod.rs
src/obd/: commands.rs  mod.rs  parser.rs  parser_tests.rs
src/scheduler/: mod.rs
src/server/: mod.rs  ws_tests.rs
src/subaru/: mod.rs
src/transport/: mod.rs
