[package]
name        = "tapiti"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["eruizpy <eruizpy@gmail.com>"]
repository  = "https://github.com/eruizpy/tapiti"
description = "EJ205 OBD-II monitor — fast as a tapiti"

[[bin]]
name = "tapiti"
path = "src/main.rs"

[dependencies]
tokio             = { version = "=1.35.1", features = ["full"] }
serde             = { version = "1",       features = ["derive"] }
serde_json        = "1"
rusqlite          = { version = "0.31",    features = ["bundled"] }
anyhow            = "1"
thiserror         = "=1.0.50"
hex               = "0.4"
tracing           = "0.1"
tracing-subscriber = { version = "=0.3.18", features = ["fmt"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
